--- a/css/style.css
+++ b/css/style.css
@@ -804,26 +804,7 @@ body .wrapper .container .parralax__wave-1 .wave-wrapper .wave-img {
 		height: 25%;
 		background: url("../img/waves/wave-plain.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation-name: wave-1-anim;
-		animation-duration: 8s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
-}
-@keyframes wave-1-anim {
-		0% {
-				transform: scale(0.5) rotateZ(0) translate3d(0, 5%, 0) rotateZ(0);
-		}
-		100% {
-				transform: scale(0.5) rotateZ(360deg) translate3d(0, 5%, 0) rotateZ(-360deg);
-		}
-}
-body .wrapper .container .parralax__wave-1 .wave-wrapper .wave-img .black {
-		position: absolute;
-		width: 130%;
-		height: 20%;
-		bottom: -20%;
-		left: -15%;
-		background-color: black;
+		animation: wave-anim-left 4s linear infinite;
 }
 body .wrapper .container .parralax__wave-2 {
 		width: 100%;
@@ -855,26 +836,7 @@ body .wrapper .container .parralax__wave-2 .wave-wrapper .wave-img {
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation-name: wave-2-anim;
-		animation-duration: 7s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
-}
-@keyframes wave-2-anim {
-		0% {
-				transform: scale(0.6) rotateZ(0) translate3d(0, 6%, 0) rotateZ(0);
-		}
-		100% {
-				transform: scale(0.6) rotateZ(360deg) translate3d(0, 6%, 0) rotateZ(-360deg);
-		}
-}
-body .wrapper .container .parralax__wave-2 .wave-wrapper .wave-img .black {
-		position: absolute;
-		width: 130%;
-		height: 20%;
-		bottom: -20%;
-		left: -15%;
-		background-color: black;
+		animation: wave-anim-right 3s linear infinite;
 }
 body .wrapper .container .parralax__wave-3 {
 		width: 100%;
@@ -906,26 +868,7 @@ body .wrapper .container .parralax__wave-3 .wave-wrapper .wave-img {
 		height: 25%;
 		background: url("../img/waves/wave-plain.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation-name: wave-3-anim;
-		animation-duration: 6s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
-}
-@keyframes wave-3-anim {
-		0% {
-				transform: scale(0.7) rotateZ(0) translate3d(0, 7%, 0) rotateZ(0);
-		}
-		100% {
-				transform: scale(0.7) rotateZ(360deg) translate3d(0, 7%, 0) rotateZ(-360deg);
-		}
-}
-body .wrapper .container .parralax__wave-3 .wave-wrapper .wave-img .black {
-		position: absolute;
-		width: 130%;
-		height: 20%;
-		bottom: -20%;
-		left: -15%;
-		background-color: black;
+		animation: wave-anim-left 3s linear infinite;
 }
 body .wrapper .container .parralax__wave-4 {
 		width: 100%;
@@ -957,26 +900,7 @@ body .wrapper .container .parralax__wave-4 .wave-wrapper .wave-img {
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation-name: wave-4-anim;
-		animation-duration: 5s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
-}
-@keyframes wave-4-anim {
-		0% {
-				transform: scale(0.8) rotateZ(0) translate3d(0, 8%, 0) rotateZ(0);
-		}
-		100% {
-				transform: scale(0.8) rotateZ(360deg) translate3d(0, 8%, 0) rotateZ(-360deg);
-		}
-}
-body .wrapper .container .parralax__wave-4 .wave-wrapper .wave-img .black {
-		position: absolute;
-		width: 130%;
-		height: 20%;
-		bottom: -20%;
-		left: -15%;
-		background-color: black;
+		animation: wave-anim-right 4s linear infinite;
 }
 body .wrapper .container .parralax__wave-5 {
 		width: 100%;
@@ -1008,20 +932,9 @@ body .wrapper .container .parralax__wave-5 .wave-wrapper .wave-img {
 		height: 25%;
 		background: url("../img/waves/wave-plain.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation-name: wave-5-anim;
-		animation-duration: 4s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
+		animation: wave-anim-left 4s linear infinite;
 }
-@keyframes wave-5-anim {
-		0% {
-				transform: scale(0.9) rotateZ(0) translate3d(0, 9%, 0) rotateZ(0);
-		}
-		100% {
-				transform: scale(0.9) rotateZ(360deg) translate3d(0, 9%, 0) rotateZ(-360deg);
-		}
-}
-body .wrapper .container .parralax__wave-5 .wave-wrapper .wave-img .black {
+body .wrapper .container .parralax__wave-5 .wave-wrapper .black {
 		position: absolute;
 		width: 130%;
 		height: 100%;
@@ -1039,6 +952,16 @@ body .wrapper .container .parralax__wave-6 .wave-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
+		transform: translateY(50%);
+		animation: liighthouse-popup 0.5s linear 0.5s 1 forwards;
+}
+@keyframes liighthouse-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
 }
 body .wrapper .container .parralax__wave-6 .wave-wrapper .wave-img {
 		position: absolute;
@@ -1048,35 +971,112 @@ body .wrapper .container .parralax__wave-6 .wave-wrapper .wave-img {
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation: wave-6-anim 5s linear infinite;
+		animation: wave-anim-right 3s linear infinite;
 }
-@keyframes wave-6-anim {
+@keyframes wave-anim-right {
 		0% {
-				transform: translate(0, 0);
+				transform: translate(-20px, 0);
+		}
+		6.25% {
+				transform: translate(-18.5px, -8px);
 		}
 		12.5% {
-				transform: translate(10px, -15px);
+				transform: translate(-14.5px, -14.5px);
+		}
+		18.75% {
+				transform: translate(-8px, -18.5px);
 		}
 		25% {
-				transform: translate(20px, -20px);
+				transform: translate(0, -20px);
+		}
+		31.25% {
+				transform: translate(8, -18.5px);
 		}
 		37.5% {
-				transform: translate(30px, -15px);
+				transform: translate(14.5px, -14.5px);
+		}
+		43.75% {
+				transform: translate(18.5px, -8px);
 		}
 		50% {
-				transform: translate(40px, 0);
+				transform: translate(20px, 0);
+		}
+		56.25% {
+				transform: translate(18.5px, 8);
 		}
 		62.5% {
-				transform: translate(30px, 15px);
+				transform: translate(14.5px, 14.5px);
+		}
+		68.75% {
+				transform: translate(8px, 18.5px);
 		}
 		75% {
-				transform: translate(20px, 20px);
+				transform: translate(0, 20px);
+		}
+		81.25% {
+				transform: translate(-8px, 18.5px);
 		}
 		87.5% {
-				transform: translate(10px, 15px);
+				transform: translate(-14.5px, 14.5px);
+		}
+		93.75% {
+				transform: translate(-18.5px, 8px);
 		}
 		100% {
-				transform: translate(0, 0);
+				transform: translate(-20px, 0);
+		}
+}
+@keyframes wave-anim-left {
+		0% {
+				transform: translate(20px, 0);
+		}
+		6.25% {
+				transform: translate(18.5px, -8px);
+		}
+		12.5% {
+				transform: translate(14.5px, -14.5px);
+		}
+		18.75% {
+				transform: translate(8px, -18.5px);
+		}
+		25% {
+				transform: translate(0, -20px);
+		}
+		31.25% {
+				transform: translate(-8, -18px);
+		}
+		37.5% {
+				transform: translate(-14.5px, -14.5px);
+		}
+		43.75% {
+				transform: translate(-18.5px, -8px);
+		}
+		50% {
+				transform: translate(-20px, 0);
+		}
+		56.25% {
+				transform: translate(-18.5px, 8);
+		}
+		62.5% {
+				transform: translate(-14.5px, 14.5px);
+		}
+		68.75% {
+				transform: translate(-8px, 18.5px);
+		}
+		75% {
+				transform: translate(0, 20px);
+		}
+		81.25% {
+				transform: translate(8px, 18.5px);
+		}
+		87.5% {
+				transform: translate(14.5px, 14.5px);
+		}
+		93.75% {
+				transform: translate(18.5px, 8px);
+		}
+		100% {
+				transform: translate(20px, 0);
 		}
 }
 body .wrapper .container .parralax__liighthouse {
