--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -735,9 +735,9 @@ body {
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        transform: translateY(50%);
-                        animation: liighthouse-popup 0.5s linear 1.5s 1 forwards;
 
+                        // transform: translateY(50%);
+                        // animation: liighthouse-popup 0.5s linear 1.5s 1 forwards;
                         @keyframes liighthouse-popup {
                             0% {
                                 transform: translateY(50%);
@@ -749,63 +749,65 @@ body {
                         .wave-img {
                             position: absolute;
                             bottom: 9%;
+                            transform: scale(0.5);
                             left: -70%;
                             width: 240%;
                             height: 25%;
                             background: url("../img/waves/wave-plain.png") center bottom / 100% 100% repeat-x;
                             background-size: contain;
+
                             animation: wave1-anim-left 4s linear infinite;
                             @keyframes wave1-anim-left {
                                 0% {
-                                    transform: scale(0.5) translate(20px, 0);
+                                    transform: scale(0.5) translate(10px, 0);
                                 }
                                 6.25% {
-                                    transform: scale(0.5) translate(18.5px, -8px);
+                                    transform: scale(0.5) translate(8px, -3px);
                                 }
                                 12.5% {
-                                    transform: scale(0.5) translate(14.5px, -14.5px);
+                                    transform: scale(0.5) translate(6px, -6px);
                                 }
                                 18.75% {
-                                    transform: scale(0.5) translate(8px, -18.5px);
+                                    transform: scale(0.5) translate(3px, -8px);
                                 }
                                 25% {
-                                    transform: scale(0.5) translate(0, -20px);
+                                    transform: scale(0.5) translate(0, -10px);
                                 }
                                 31.25% {
-                                    transform: scale(0.5) translate(-8, -18px);
+                                    transform: scale(0.5) translate(-3px, -8px);
                                 }
                                 37.5% {
-                                    transform: scale(0.5) translate(-14.5px, -14.5px);
+                                    transform: scale(0.5) translate(-6px, -6px);
                                 }
                                 43.75% {
-                                    transform: scale(0.5) translate(-18.5px, -8px);
+                                    transform: scale(0.5) translate(-8px, -3px);
                                 }
                                 50% {
-                                    transform: scale(0.5) translate(-20px, 0);
+                                    transform: scale(0.5) translate(-10px, 0);
                                 }
                                 56.25% {
-                                    transform: scale(0.5) translate(-18.5px, 8);
+                                    transform: scale(0.5) translate(-8px, 3px);
                                 }
                                 62.5% {
-                                    transform: scale(0.5) translate(-14.5px, 14.5px);
+                                    transform: scale(0.5) translate(-6px, 6px);
                                 }
                                 68.75% {
-                                    transform: scale(0.5) translate(-8px, 18.5px);
+                                    transform: scale(0.5) translate(-3px, 8px);
                                 }
                                 75% {
-                                    transform: scale(0.5) translate(0, 20px);
+                                    transform: scale(0.5) translate(0, 10px);
                                 }
                                 81.25% {
-                                    transform: scale(0.5) translate(8px, 18.5px);
+                                    transform: scale(0.5) translate(3px, 8px);
                                 }
                                 87.5% {
-                                    transform: scale(0.5) translate(14.5px, 14.5px);
+                                    transform: scale(0.5) translate(6px, 6px);
                                 }
                                 93.75% {
-                                    transform: scale(0.5) translate(18.5px, 8px);
+                                    transform: scale(0.5) translate(8px, 3px);
                                 }
                                 100% {
-                                    transform: scale(0.5) translate(20px, 0);
+                                    transform: scale(0.5) translate(10px, 0);
                                 }
                             }
                         }
@@ -821,8 +823,9 @@ body {
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        transform: translateY(50%);
-                        animation: liighthouse-popup 0.5s linear 1.3s 1 forwards;
+
+                        // transform: translateY(50%);
+                        // animation: liighthouse-popup 0.5s linear 1.3s 1 forwards;
                         @keyframes liighthouse-popup {
                             0% {
                                 transform: translateY(50%);
@@ -834,63 +837,65 @@ body {
                         .wave-img {
                             position: absolute;
                             bottom: 6%;
+                            transform: scale(0.6);
                             left: -55%;
                             width: 210%;
                             height: 25%;
                             background: url("../img/waves/wave-paint.png") center bottom / 100% 100% repeat-x;
                             background-size: contain;
+
                             animation: wave2-anim-right 3s linear infinite;
                             @keyframes wave2-anim-right {
                                 0% {
-                                    transform: scale(0.6) translate(-20px, 0);
+                                    transform: scale(0.6) translate(-12px, 0);
                                 }
                                 6.25% {
-                                    transform: scale(0.6) translate(-18.5px, -8px);
+                                    transform: scale(0.6) translate(-10px, -4px);
                                 }
                                 12.5% {
-                                    transform: scale(0.6) translate(-14.5px, -14.5px);
+                                    transform: scale(0.6) translate(-8px, -8px);
                                 }
                                 18.75% {
-                                    transform: scale(0.6) translate(-8px, -18.5px);
+                                    transform: scale(0.6) translate(-4px, -10px);
                                 }
                                 25% {
-                                    transform: scale(0.6) translate(0, -20px);
+                                    transform: scale(0.6) translate(0, -12px);
                                 }
                                 31.25% {
-                                    transform: scale(0.6) translate(8, -18.5px);
+                                    transform: scale(0.6) translate(4, -10px);
                                 }
                                 37.5% {
-                                    transform: scale(0.6) translate(14.5px, -14.5px);
+                                    transform: scale(0.6) translate(8px, -8px);
                                 }
                                 43.75% {
-                                    transform: scale(0.6) translate(18.5px, -8px);
+                                    transform: scale(0.6) translate(10px, -4px);
                                 }
                                 50% {
-                                    transform: scale(0.6) translate(20px, 0);
+                                    transform: scale(0.6) translate(12px, 0);
                                 }
                                 56.25% {
-                                    transform: scale(0.6) translate(18.5px, 8);
+                                    transform: scale(0.6) translate(10px, 4px);
                                 }
                                 62.5% {
-                                    transform: scale(0.6) translate(14.5px, 14.5px);
+                                    transform: scale(0.6) translate(8px, 8px);
                                 }
                                 68.75% {
-                                    transform: scale(0.6) translate(8px, 18.5px);
+                                    transform: scale(0.6) translate(4px, 10px);
                                 }
                                 75% {
-                                    transform: scale(0.6) translate(0, 20px);
+                                    transform: scale(0.6) translate(0, 12px);
                                 }
                                 81.25% {
-                                    transform: scale(0.6) translate(-8px, 18.5px);
+                                    transform: scale(0.6) translate(-4px, 10px);
                                 }
                                 87.5% {
-                                    transform: scale(0.6) translate(-14.5px, 14.5px);
+                                    transform: scale(0.6) translate(-8px, 8px);
                                 }
                                 93.75% {
-                                    transform: scale(0.6) translate(-18.5px, 8px);
+                                    transform: scale(0.6) translate(-10px, 4px);
                                 }
                                 100% {
-                                    transform: scale(0.6) translate(-20px, 0);
+                                    transform: scale(0.6) translate(-12px, 0);
                                 }
                             }
                         }
@@ -906,8 +911,9 @@ body {
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        transform: translateY(50%);
-                        animation: liighthouse-popup 0.5s linear 1.1s 1 forwards;
+
+                        // transform: translateY(50%);
+                        // animation: liighthouse-popup 0.5s linear 1.1s 1 forwards;
                         @keyframes liighthouse-popup {
                             0% {
                                 transform: translateY(50%);
@@ -918,64 +924,66 @@ body {
                         }
                         .wave-img {
                             position: absolute;
+                            transform: scale(0.7);
                             bottom: 3%;
                             left: -40%;
                             width: 180%;
                             height: 25%;
                             background: url("../img/waves/wave-plain.png") center bottom / 100% 100% repeat-x;
                             background-size: contain;
+
                             animation: wave3-anim-left 3s linear infinite;
                             @keyframes wave3-anim-left {
                                 0% {
-                                    transform: scale(0.7) translate(20px, 0);
+                                    transform: scale(0.7) translate(14px, 0);
                                 }
                                 6.25% {
-                                    transform: scale(0.7) translate(18.5px, -8px);
+                                    transform: scale(0.7) translate(11px, -4px);
                                 }
                                 12.5% {
-                                    transform: scale(0.7) translate(14.5px, -14.5px);
+                                    transform: scale(0.7) translate(9px, -9px);
                                 }
                                 18.75% {
-                                    transform: scale(0.7) translate(8px, -18.5px);
+                                    transform: scale(0.7) translate(4px, -11px);
                                 }
                                 25% {
-                                    transform: scale(0.7) translate(0, -20px);
+                                    transform: scale(0.7) translate(0, -14px);
                                 }
                                 31.25% {
-                                    transform: scale(0.7) translate(-8, -18px);
+                                    transform: scale(0.7) translate(-4px, -11px);
                                 }
                                 37.5% {
-                                    transform: scale(0.7) translate(-14.5px, -14.5px);
+                                    transform: scale(0.7) translate(-9px, -9px);
                                 }
                                 43.75% {
-                                    transform: scale(0.7) translate(-18.5px, -8px);
+                                    transform: scale(0.7) translate(-11px, -4px);
                                 }
                                 50% {
-                                    transform: scale(0.7) translate(-20px, 0);
+                                    transform: scale(0.7) translate(-14px, 0);
                                 }
                                 56.25% {
-                                    transform: scale(0.7) translate(-18.5px, 8);
+                                    transform: scale(0.7) translate(-11px, 4px);
                                 }
                                 62.5% {
-                                    transform: scale(0.7) translate(-14.5px, 14.5px);
+                                    transform: scale(0.7) translate(-9px, 9px);
                                 }
                                 68.75% {
-                                    transform: scale(0.7) translate(-8px, 18.5px);
+                                    transform: scale(0.7) translate(-4px, 11px);
                                 }
                                 75% {
-                                    transform: scale(0.7) translate(0, 20px);
+                                    transform: scale(0.7) translate(0, 14px);
                                 }
                                 81.25% {
-                                    transform: scale(0.7) translate(8px, 18.5px);
+                                    transform: scale(0.7) translate(4px, 11px);
                                 }
                                 87.5% {
-                                    transform: scale(0.7) translate(14.5px, 14.5px);
+                                    transform: scale(0.7) translate(9px, 9px);
                                 }
                                 93.75% {
-                                    transform: scale(0.7) translate(18.5px, 8px);
+                                    transform: scale(0.7) translate(11px, 4px);
                                 }
                                 100% {
-                                    transform: scale(0.7) translate(20px, 0);
+                                    transform: scale(0.7) translate(14px, 0);
                                 }
                             }
                         }
@@ -991,8 +999,9 @@ body {
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        transform: translateY(50%);
-                        animation: liighthouse-popup 0.5s linear 0.9s 1 forwards;
+
+                        // transform: translateY(50%);
+                        // animation: liighthouse-popup 0.5s linear 0.9s 1 forwards;
                         @keyframes liighthouse-popup {
                             0% {
                                 transform: translateY(50%);
@@ -1004,12 +1013,14 @@ body {
                         .wave-img {
                             position: absolute;
                             bottom: 0%;
+                            transform: scale(0.8);
                             left: -35%;
                             width: 170%;
                             height: 25%;
                             background: url("../img/waves/wave-paint.png") center bottom / 100% 100% repeat-x;
                             background-size: contain;
-                            animation: wave4-anim-right 4s linear infinite;
+
+                            // animation: wave4-anim-right 4s linear infinite;
                             @keyframes wave4-anim-right {
                                 0% {
                                     transform: scale(0.8) translate(-20px, 0);
@@ -1076,8 +1087,9 @@ body {
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        transform: translateY(50%);
-                        animation: liighthouse-popup 0.5s linear 0.7s 1 forwards;
+
+                        // transform: translateY(50%);
+                        // animation: liighthouse-popup 0.5s linear 0.7s 1 forwards;
                         @keyframes liighthouse-popup {
                             0% {
                                 transform: translateY(50%);
@@ -1090,12 +1102,13 @@ body {
                             position: absolute;
                             bottom: -3%;
                             left: -30%;
+                            transform: scale(0.9);
                             width: 160%;
                             height: 25%;
                             background: url("../img/waves/wave-plain.png") center bottom / 100% 100% repeat-x;
                             background-size: contain;
 
-                            animation: wave5-anim-left 4s linear infinite;
+                            // animation: wave5-anim-left 4s linear infinite;
                             @keyframes wave5-anim-left {
                                 0% {
                                     transform: scale(0.9) translate(20px, 0);
@@ -1170,8 +1183,9 @@ body {
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        transform: translateY(50%);
-                        animation: liighthouse-popup 0.5s linear 0.5s 1 forwards;
+
+                        // transform: translateY(50%);
+                        // animation: liighthouse-popup 0.5s linear 0.5s 1 forwards;
                         @keyframes liighthouse-popup {
                             0% {
                                 transform: translateY(50%);
@@ -1188,7 +1202,8 @@ body {
                             height: 25%;
                             background: url("../img/waves/wave-paint.png") center bottom / 100% 100% repeat-x;
                             background-size: contain;
-                            animation: wave6-anim-right 3s linear infinite;
+
+                            // animation: wave6-anim-right 3s linear infinite;
                             @keyframes wave6-anim-right {
                                 0% {
                                     transform: translate(-20px, 0);
