--- a/css/style.css
+++ b/css/style.css
@@ -784,8 +784,6 @@ body .wrapper .container .parralax__wave-1 .wave-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transform: translateY(50%);
-		animation: liighthouse-popup 0.5s linear 1.5s 1 forwards;
 }
 @keyframes liighthouse-popup {
 		0% {
@@ -798,6 +796,7 @@ body .wrapper .container .parralax__wave-1 .wave-wrapper {
 body .wrapper .container .parralax__wave-1 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: 9%;
+		transform: scale(0.5);
 		left: -70%;
 		width: 240%;
 		height: 25%;
@@ -807,55 +806,55 @@ body .wrapper .container .parralax__wave-1 .wave-wrapper .wave-img {
 }
 @keyframes wave1-anim-left {
 		0% {
-				transform: scale(0.5) translate(20px, 0);
+				transform: scale(0.5) translate(10px, 0);
 		}
 		6.25% {
-				transform: scale(0.5) translate(18.5px, -8px);
+				transform: scale(0.5) translate(8px, -3px);
 		}
 		12.5% {
-				transform: scale(0.5) translate(14.5px, -14.5px);
+				transform: scale(0.5) translate(6px, -6px);
 		}
 		18.75% {
-				transform: scale(0.5) translate(8px, -18.5px);
+				transform: scale(0.5) translate(3px, -8px);
 		}
 		25% {
-				transform: scale(0.5) translate(0, -20px);
+				transform: scale(0.5) translate(0, -10px);
 		}
 		31.25% {
-				transform: scale(0.5) translate(-8, -18px);
+				transform: scale(0.5) translate(-3px, -8px);
 		}
 		37.5% {
-				transform: scale(0.5) translate(-14.5px, -14.5px);
+				transform: scale(0.5) translate(-6px, -6px);
 		}
 		43.75% {
-				transform: scale(0.5) translate(-18.5px, -8px);
+				transform: scale(0.5) translate(-8px, -3px);
 		}
 		50% {
-				transform: scale(0.5) translate(-20px, 0);
+				transform: scale(0.5) translate(-10px, 0);
 		}
 		56.25% {
-				transform: scale(0.5) translate(-18.5px, 8);
+				transform: scale(0.5) translate(-8px, 3px);
 		}
 		62.5% {
-				transform: scale(0.5) translate(-14.5px, 14.5px);
+				transform: scale(0.5) translate(-6px, 6px);
 		}
 		68.75% {
-				transform: scale(0.5) translate(-8px, 18.5px);
+				transform: scale(0.5) translate(-3px, 8px);
 		}
 		75% {
-				transform: scale(0.5) translate(0, 20px);
+				transform: scale(0.5) translate(0, 10px);
 		}
 		81.25% {
-				transform: scale(0.5) translate(8px, 18.5px);
+				transform: scale(0.5) translate(3px, 8px);
 		}
 		87.5% {
-				transform: scale(0.5) translate(14.5px, 14.5px);
+				transform: scale(0.5) translate(6px, 6px);
 		}
 		93.75% {
-				transform: scale(0.5) translate(18.5px, 8px);
+				transform: scale(0.5) translate(8px, 3px);
 		}
 		100% {
-				transform: scale(0.5) translate(20px, 0);
+				transform: scale(0.5) translate(10px, 0);
 		}
 }
 body .wrapper .container .parralax__wave-2 {
@@ -868,8 +867,6 @@ body .wrapper .container .parralax__wave-2 .wave-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transform: translateY(50%);
-		animation: liighthouse-popup 0.5s linear 1.3s 1 forwards;
 }
 @keyframes liighthouse-popup {
 		0% {
@@ -882,6 +879,7 @@ body .wrapper .container .parralax__wave-2 .wave-wrapper {
 body .wrapper .container .parralax__wave-2 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: 6%;
+		transform: scale(0.6);
 		left: -55%;
 		width: 210%;
 		height: 25%;
@@ -891,55 +889,55 @@ body .wrapper .container .parralax__wave-2 .wave-wrapper .wave-img {
 }
 @keyframes wave2-anim-right {
 		0% {
-				transform: scale(0.6) translate(-20px, 0);
+				transform: scale(0.6) translate(-12px, 0);
 		}
 		6.25% {
-				transform: scale(0.6) translate(-18.5px, -8px);
+				transform: scale(0.6) translate(-10px, -4px);
 		}
 		12.5% {
-				transform: scale(0.6) translate(-14.5px, -14.5px);
+				transform: scale(0.6) translate(-8px, -8px);
 		}
 		18.75% {
-				transform: scale(0.6) translate(-8px, -18.5px);
+				transform: scale(0.6) translate(-4px, -10px);
 		}
 		25% {
-				transform: scale(0.6) translate(0, -20px);
+				transform: scale(0.6) translate(0, -12px);
 		}
 		31.25% {
-				transform: scale(0.6) translate(8, -18.5px);
+				transform: scale(0.6) translate(4, -10px);
 		}
 		37.5% {
-				transform: scale(0.6) translate(14.5px, -14.5px);
+				transform: scale(0.6) translate(8px, -8px);
 		}
 		43.75% {
-				transform: scale(0.6) translate(18.5px, -8px);
+				transform: scale(0.6) translate(10px, -4px);
 		}
 		50% {
-				transform: scale(0.6) translate(20px, 0);
+				transform: scale(0.6) translate(12px, 0);
 		}
 		56.25% {
-				transform: scale(0.6) translate(18.5px, 8);
+				transform: scale(0.6) translate(10px, 4px);
 		}
 		62.5% {
-				transform: scale(0.6) translate(14.5px, 14.5px);
+				transform: scale(0.6) translate(8px, 8px);
 		}
 		68.75% {
-				transform: scale(0.6) translate(8px, 18.5px);
+				transform: scale(0.6) translate(4px, 10px);
 		}
 		75% {
-				transform: scale(0.6) translate(0, 20px);
+				transform: scale(0.6) translate(0, 12px);
 		}
 		81.25% {
-				transform: scale(0.6) translate(-8px, 18.5px);
+				transform: scale(0.6) translate(-4px, 10px);
 		}
 		87.5% {
-				transform: scale(0.6) translate(-14.5px, 14.5px);
+				transform: scale(0.6) translate(-8px, 8px);
 		}
 		93.75% {
-				transform: scale(0.6) translate(-18.5px, 8px);
+				transform: scale(0.6) translate(-10px, 4px);
 		}
 		100% {
-				transform: scale(0.6) translate(-20px, 0);
+				transform: scale(0.6) translate(-12px, 0);
 		}
 }
 body .wrapper .container .parralax__wave-3 {
@@ -952,8 +950,6 @@ body .wrapper .container .parralax__wave-3 .wave-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transform: translateY(50%);
-		animation: liighthouse-popup 0.5s linear 1.1s 1 forwards;
 }
 @keyframes liighthouse-popup {
 		0% {
@@ -965,6 +961,7 @@ body .wrapper .container .parralax__wave-3 .wave-wrapper {
 }
 body .wrapper .container .parralax__wave-3 .wave-wrapper .wave-img {
 		position: absolute;
+		transform: scale(0.7);
 		bottom: 3%;
 		left: -40%;
 		width: 180%;
@@ -975,55 +972,55 @@ body .wrapper .container .parralax__wave-3 .wave-wrapper .wave-img {
 }
 @keyframes wave3-anim-left {
 		0% {
-				transform: scale(0.7) translate(20px, 0);
+				transform: scale(0.7) translate(14px, 0);
 		}
 		6.25% {
-				transform: scale(0.7) translate(18.5px, -8px);
+				transform: scale(0.7) translate(11px, -4px);
 		}
 		12.5% {
-				transform: scale(0.7) translate(14.5px, -14.5px);
+				transform: scale(0.7) translate(9px, -9px);
 		}
 		18.75% {
-				transform: scale(0.7) translate(8px, -18.5px);
+				transform: scale(0.7) translate(4px, -11px);
 		}
 		25% {
-				transform: scale(0.7) translate(0, -20px);
+				transform: scale(0.7) translate(0, -14px);
 		}
 		31.25% {
-				transform: scale(0.7) translate(-8, -18px);
+				transform: scale(0.7) translate(-4px, -11px);
 		}
 		37.5% {
-				transform: scale(0.7) translate(-14.5px, -14.5px);
+				transform: scale(0.7) translate(-9px, -9px);
 		}
 		43.75% {
-				transform: scale(0.7) translate(-18.5px, -8px);
+				transform: scale(0.7) translate(-11px, -4px);
 		}
 		50% {
-				transform: scale(0.7) translate(-20px, 0);
+				transform: scale(0.7) translate(-14px, 0);
 		}
 		56.25% {
-				transform: scale(0.7) translate(-18.5px, 8);
+				transform: scale(0.7) translate(-11px, 4px);
 		}
 		62.5% {
-				transform: scale(0.7) translate(-14.5px, 14.5px);
+				transform: scale(0.7) translate(-9px, 9px);
 		}
 		68.75% {
-				transform: scale(0.7) translate(-8px, 18.5px);
+				transform: scale(0.7) translate(-4px, 11px);
 		}
 		75% {
-				transform: scale(0.7) translate(0, 20px);
+				transform: scale(0.7) translate(0, 14px);
 		}
 		81.25% {
-				transform: scale(0.7) translate(8px, 18.5px);
+				transform: scale(0.7) translate(4px, 11px);
 		}
 		87.5% {
-				transform: scale(0.7) translate(14.5px, 14.5px);
+				transform: scale(0.7) translate(9px, 9px);
 		}
 		93.75% {
-				transform: scale(0.7) translate(18.5px, 8px);
+				transform: scale(0.7) translate(11px, 4px);
 		}
 		100% {
-				transform: scale(0.7) translate(20px, 0);
+				transform: scale(0.7) translate(14px, 0);
 		}
 }
 body .wrapper .container .parralax__wave-4 {
@@ -1036,8 +1033,6 @@ body .wrapper .container .parralax__wave-4 .wave-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transform: translateY(50%);
-		animation: liighthouse-popup 0.5s linear 0.9s 1 forwards;
 }
 @keyframes liighthouse-popup {
 		0% {
@@ -1050,12 +1045,12 @@ body .wrapper .container .parralax__wave-4 .wave-wrapper {
 body .wrapper .container .parralax__wave-4 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: 0%;
+		transform: scale(0.8);
 		left: -35%;
 		width: 170%;
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation: wave4-anim-right 4s linear infinite;
 }
 @keyframes wave4-anim-right {
 		0% {
@@ -1120,8 +1115,6 @@ body .wrapper .container .parralax__wave-5 .wave-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transform: translateY(50%);
-		animation: liighthouse-popup 0.5s linear 0.7s 1 forwards;
 }
 @keyframes liighthouse-popup {
 		0% {
@@ -1135,11 +1128,11 @@ body .wrapper .container .parralax__wave-5 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: -3%;
 		left: -30%;
+		transform: scale(0.9);
 		width: 160%;
 		height: 25%;
 		background: url("../img/waves/wave-plain.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation: wave5-anim-left 4s linear infinite;
 }
 @keyframes wave5-anim-left {
 		0% {
@@ -1212,8 +1205,6 @@ body .wrapper .container .parralax__wave-6 .wave-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transform: translateY(50%);
-		animation: liighthouse-popup 0.5s linear 0.5s 1 forwards;
 }
 @keyframes liighthouse-popup {
 		0% {
@@ -1231,7 +1222,6 @@ body .wrapper .container .parralax__wave-6 .wave-wrapper .wave-img {
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation: wave6-anim-right 3s linear infinite;
 }
 @keyframes wave6-anim-right {
 		0% {
